✨(common): 整合类型诊断